--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
 
+  * Add libcuda1 dependency to libraries that seem to be capable of doing
+    dlopen("libcuda.so") or dlopen("libcuda.so.1").
   * Merge changes from 331.104 (UNRELEASED).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
