--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
 
   * Add libcuda1 dependency to libraries that seem to be capable of doing
     dlopen("libcuda.so") or dlopen("libcuda.so.1").
+  * nvidia-libopencl1.symbols: Ensure ocl-icd-libopencl1 is always the first
+    alternative, dependency lists may be reordered.
   * Merge changes from 331.104 (UNRELEASED).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
