--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+nvidia-graphics-drivers (343.13-1) UNRELEASED; urgency=medium
+
+  * New upstream beta 343.13 (2014-08-06).
+    - Added a new attribute to the NV-CONTROL API to query the current
+      utilization of the video decode engine.
+    - Worked around a Unigine Heaven 3.0 shader bug which could cause corruption
+      when tessellation is enabled by implementing an application profile that
+      uses the "GLIgnoreGLSLExtReqs" setting.  See the documentation for the
+      __GL_IGNORE_GLSL_EXT_REQS environment variable for more details.
+    - Fixed a memory leak when destroying EGL surfaces.
+    - Added support for multiple simultaneous EGL displays.
+    - Removed support for G8x, G9x, and GT2xx GPUs, and motherboard
+      chipsets based on them. Ongoing support for new Linux kernels
+      and X servers, as well as fixes for critical bugs, will be
+      included in 340.* legacy releases through the end of 2019.
+  * Upload to experimental.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 11:33:59 +0200
+
 nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
 
   * Add libcuda1 dependency to libraries that seem to be capable of doing
