--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,13 @@
-nvidia-graphics-drivers (343.13-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (343.22-1) UNRELEASED; urgency=medium
 
+  * New upstream short lived branch release 343.22 (2014-09-18).
+    - Fixed a bug that prevented the "sync to vblank" setting from being
+      honored for EGL applications.
+    - Added support for the following GPUs: GeForce GTX 970, GeForce GTX 980.
+    - Fixed a bug that could cause some OpenGL programs to encounter out
+      of memory during a mode switch.
+    - Fixed a bug that prevented the NVIDIA OpenGL driver from honoring
+      the __GL_SHADER_DISK_CACHE_PATH environment variable.
   * New upstream beta 343.13 (2014-08-06).
     - Added a new attribute to the NV-CONTROL API to query the current
       utilization of the video decode engine.
@@ -16,7 +24,7 @@ nvidia-graphics-drivers (343.13-1) UNRELEASED; urgency=medium
   * Update symbols control files.
   * Upload to experimental.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 11:33:59 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 12:16:07 +0200
 
 nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
 
