implement extensions to conftest.sh function vm_operations_struct
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/343@5021 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ nvidia-graphics-drivers (343.22-1) UNRELEASED; urgency=medium
       included in 340.* legacy releases through the end of 2019.
   * Update symbols control files.
   * Update nv-readme.ids.
+  * conftest.h: Implement extensions to conftest.sh function
+    vm_operations_struct (343.13).
   * Upload to experimental.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 12:16:07 +0200
