--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ nvidia-graphics-drivers (343.22-1) UNRELEASED; urgency=medium
   * conftest.h: Implement extensions to conftest.sh function
     vm_operations_struct (343.13).
   * libgl1-nvidia-glx.preinst: Update list of unsupported legacy devices.
+    Update the advised legacy package to nvidia-legacy-340xx-driver.
   * Upload to experimental.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 12:16:07 +0200
