add NEWS entry about models that were moved to legacy support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/343@5024 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ nvidia-graphics-drivers (343.22-1) UNRELEASED; urgency=medium
     vm_operations_struct (343.13).
   * libgl1-nvidia-glx.preinst: Update list of unsupported legacy devices.
     Update the advised legacy package to nvidia-legacy-340xx-driver.
+  * Add NEWS entry about models that were moved to legacy support.
   * Upload to experimental.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 12:16:07 +0200
