--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * nvidia-libopencl1.symbols: Ensure ocl-icd-libopencl1 is always the first
     alternative, dependency lists may be reordered.
   * Merge changes from 331.104 (UNRELEASED).
+  * README.source: Document workflow for importing a new upstream release that
+    has moved support for some legacy cards to a new legacy driver.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
@@ -101,7 +103,7 @@ nvidia-graphics-drivers (340.24-1) unstable; urgency=medium
       functionality enabled.
     - Fixed a floating point exception in the OpenGL driver when running
       "Risk of Rain" under Wine.
-  * New upstream beta release 340.17 (2014-06-09).
+  * New upstream beta 340.17 (2014-06-09).
     - Made various improvements and corrections to the information reported
       to GL applications via the KHR_debug and ARB_debug_output extensions.
     - Fixed a bug that caused GLX applications which simultaneously create
@@ -146,7 +148,7 @@ nvidia-graphics-drivers (340.24-1) unstable; urgency=medium
 
 nvidia-graphics-drivers (337.19-1) experimental; urgency=medium
 
-  * New upstream beta release 337.17 (2014-05-01).
+  * New upstream beta 337.17 (2014-05-01).
     - Fixed a bug causing mode validation to fail for 4K resolutions over HDMI
       in certain situations.
     - Added support for the GLX_EXT_stereo_tree extension.  For more
@@ -157,7 +159,7 @@ nvidia-graphics-drivers (337.19-1) experimental; urgency=medium
       manager requires a stereo-aware composite manager.  Otherwise, only the
       left eye of stereo applications will be displayed.  See the
       GLX_EXT_stereo_tree extension specification for more details.
-  * New upstream beta release 337.12 (2014-04-08).
+  * New upstream beta 337.12 (2014-04-08).
     - Fixed a bug that could cause OpenGL programs to freeze under some
       low memory conditions.
     - Removed the "OnDemandVBlankInterrupts" X configuration option: this
