--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * Merge changes from 331.104 (UNRELEASED).
   * README.source: Document workflow for importing a new upstream release that
     has moved support for some legacy cards to a new legacy driver.
+  * nvidia-detect: Report that a driver supporting GeForce GTX 970/980 will be
+    made available in jessie-backports (and experimental).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
