--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
     has moved support for some legacy cards to a new legacy driver.
   * nvidia-detect: Report that a driver supporting GeForce GTX 970/980 will be
     made available in jessie-backports (and experimental).
+  * d/rules: Correctly parse PCI ID lists from upstream README of release
+    343xx onwards.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
