--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
     made available in jessie-backports (and experimental).
   * d/rules: Correctly parse PCI ID lists from upstream README of release
     343xx onwards.
+  * conftest.h: Implement extensions to conftest.sh function
+    vm_operations_struct (343.13).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
