--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ nvidia-graphics-drivers (343.22-1) UNRELEASED; urgency=medium
   * libgl1-nvidia-glx.preinst: Update list of unsupported legacy devices.
     Update the advised legacy package to nvidia-legacy-340xx-driver.
   * Add NEWS entry about models that were moved to legacy support.
+  * Update list of supported models.
   * Upload to experimental.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 14 Oct 2014 12:16:07 +0200
