--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
     343xx onwards.
   * conftest.h: Implement extensions to conftest.sh function
     vm_operations_struct (343.13).
+  * nvidia-vdpau-driver: Support switching via nvidia-alternative.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
