--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
     343xx onwards.
   * conftest.h: Implement extensions to conftest.sh function
     vm_operations_struct (343.13).
+  * bug-script: Collect more information.
   * Update lintian overrides.
   * nvidia-vdpau-driver: Support switching via nvidia-alternative.
   * nvidia-opencl-icd: Support switching via nvidia-alternative.
