--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * nvidia-vdpau-driver: Support switching via nvidia-alternative.
   * nvidia-opencl-icd: Support switching via nvidia-alternative.
   * lib{egl1,gles1,gles2}-nvidia: Support switching via nvidia-alternative.
+  * libnvidia-{ifr1,bfc1}: Support switching via nvidia-alternative.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
