--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * lib{egl1,gles1,gles2}-nvidia: Support switching via nvidia-alternative.
   * libnvidia-{ifr1,bfc1}: Support switching via nvidia-alternative.
   * libnvidia-encode1, libnvcuvid1: Support switching via nvidia-alternative.
+  * libnvidia-ml1, nvidia-smi: Support switching via nvidia-alternative.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
