--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * bug-script: Collect more information.
   * Update lintian overrides.
   * nvidia-vdpau-driver: Support switching via nvidia-alternative.
+  * libcuda1: Support switching via nvidia-alternative.
   * nvidia-opencl-icd: Support switching via nvidia-alternative.
   * lib{egl1,gles1,gles2}-nvidia: Support switching via nvidia-alternative.
   * libnvidia-{ifr1,bfc1}: Support switching via nvidia-alternative.
