--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * libnvidia-{ifr1,bfc1}: Support switching via nvidia-alternative.
   * libnvidia-encode1, libnvcuvid1: Support switching via nvidia-alternative.
   * libnvidia-ml1, nvidia-smi: Support switching via nvidia-alternative.
+  * nvidia-driver: Recommend libegl1-nvidia and suggest libgles[12]-nvidia.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
