--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * libnvidia-encode1, libnvcuvid1: Support switching via nvidia-alternative.
   * libnvidia-ml1, nvidia-smi: Support switching via nvidia-alternative.
   * nvidia-driver: Recommend libegl1-nvidia and suggest libgles[12]-nvidia.
+  * d/rules{,.defs}: Drop MULTIARCH switch - this is always enabled nowadays.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
