--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * libnvidia-ml1, nvidia-smi: Support switching via nvidia-alternative.
   * nvidia-driver: Recommend libegl1-nvidia and suggest libgles[12]-nvidia.
   * d/rules{,.defs}: Drop MULTIARCH switch - this is always enabled nowadays.
+  * libgl1-nvidia-glx.preinst: Rework the legacy check. Use more debconf
+    variable substitutions for easy reuse of the translations.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
