--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -43,11 +43,11 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"nvidia-legacy-304xx-driver) or the free Nouveau driver (package xserver-xorg-"
+"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
 "video-nouveau)."
 msgstr ""
-"Tale scheda richiede il vecchio driver non libero NVIDIA (pacchetto fglrx-"
-"legacy-driver) oppure il driver libero Nouveau (pacchetto xserver-xorg-video-"
+"Tale scheda richiede il vecchio driver non libero NVIDIA (pacchetto "
+"${legacy_driver}) oppure il driver libero Nouveau (pacchetto xserver-xorg-video-"
 "nouveau)."
 
 #. Type: boolean
