--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -43,11 +43,11 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"nvidia-legacy-304xx-driver) or the free Nouveau driver (package xserver-xorg-"
+"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
 "video-nouveau)."
 msgstr ""
-"上記のカードには、フリーではない旧式の NVIDIA ドライバ (nvidia-legacy-304xx-"
-"driver パッケージ) またはフリーの Nouveau ドライバ (xserver-xorg-video-"
+"上記のカードには、フリーではない旧式の NVIDIA ドライバ (${legacy_driver}"
+" パッケージ) またはフリーの Nouveau ドライバ (xserver-xorg-video-"
 "nouveau パッケージ) のいずれかが必要です。"
 
 #. Type: boolean
