bulk substitution: ${driver}
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5065 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -27,12 +27,12 @@ msgstr "Nainstalovat ovladač NVIDIA i když nepodporuje grafickou kartu?"
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"Systém má grafickou kartu, kterou již nebude ovladač NVIDIA (balíček fglrx-"
-"driver) nadále obsluhovat. Můžete si však přát ponechat balíček "
+"Systém má grafickou kartu, kterou již nebude ovladač NVIDIA (balíček "
+"${driver}) nadále obsluhovat. Můžete si však přát ponechat balíček "
 "nainstalovaný (například pro nějakou jinou kartu), ale karta s následující "
 "čipovou sadou nebude použitelná:"
 
