--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -28,12 +28,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "De følgende grafikchipsæt i dit system er ikke længere understøttet af "
-"NVIDIA-driveren (pakke nvidia-driver). Du kan beholde pakken installeret for "
+"NVIDIA-driveren (pakke ${driver}). Du kan beholde pakken installeret for "
 "eksempel for et andet grafikkort - men grafikkort med det følgende chipsæt "
 "vil ikke kunne bruges."
 
