--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -28,12 +28,12 @@ msgstr "NVIDIA-Treiber installieren trotz nicht unterstützter Grafikkarte?"
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Ihr System hat eine Grafikkarte, die nicht mehr vom NVIDIA-Treiber (aus dem "
-"Paket nvidia-driver) bedient wird. Sie möchten das Paket vielleicht "
+"Paket ${driver}) bedient wird. Sie möchten das Paket vielleicht "
 "installiert lassen - um beispielsweise eine andere Karte zu betreiben, aber "
 "der folgende Chipsatz wird damit nicht nutzbar sein:"
 
