--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -62,12 +62,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Este sistema tiene una tarjeta gráfica que ya no puede administrar el "
-"controlador NVIDIA (paquete «nvidia-driver»). Tal vez quiera mantener el "
+"controlador NVIDIA (paquete «${driver}»). Tal vez quiera mantener el "
 "paquete instalado (por ejemplo para controlar alguna otra tarjeta), pero no "
 "podrá utilizarse para gestionar la tarjeta mostrada a continuación:"
 
