--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -29,12 +29,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Questo sistema ha una scheda grafica che non è più gestita dal driver NVIDIA "
-"(pacchetto nvidia-driver). Si può voler mantenere il pacchetto installato, "
+"(pacchetto ${driver}). Si può voler mantenere il pacchetto installato, "
 "ad esempio per pilotare una qualche altra scheda, ma quella con il seguente "
 "chipset non sarà utilizzabile:"
 
