--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -31,12 +31,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "W systemie znajduje się karta graficzna, która nie jest dłużej obsługiwana "
-"przez sterownik NVIDIA (z pakietu nvidia-driver). Można jednak zachować "
+"przez sterownik NVIDIA (z pakietu ${driver}). Można jednak zachować "
 "pakiet (np. do innej karty), lecz ta z następującym chipsetem nie będzie "
 "wówczas obsługiwana:"
 
