--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -29,12 +29,12 @@ msgstr "Instalar a driver NVIDIA apesar da placa gráfica não ser suportada?"
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "O sistema tem uma placa gráfica que já não é suportada pela driver NVIDIA "
-"(pacote nvidia-driver). Você pode desejar manter o pacote instalado - por "
+"(pacote ${driver}). Você pode desejar manter o pacote instalado - por "
 "exemplo para lidar com outra placa) - mas a placa com o seguinte chipset não "
 "irá funcionar:"
 
