--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -29,12 +29,12 @@ msgstr "Ska NVIDIA-drivrutinen installeras även om grafikkortet inte stöds?"
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Systemet har ett grafikkort som inte längre hanteras av drivrutinen NVIDIA "
-"(paketet nvidia-driver). Du kan välja att fortsätta ha paketet installerat - "
+"(paketet ${driver}). Du kan välja att fortsätta ha paketet installerat - "
 "exempelvis för att driva ett annat kort - men kortet med följande chipp kan "
 "inte användas:"
 
