--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -28,11 +28,11 @@ msgstr "Grafik kartı desteklenmediği halde NVIDIA sürücüsü kurulsun mu?"
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"Sisteminizde bulunan grafik kartı artık (nvidia-driver paketinin sağladığı) "
+"Sisteminizde bulunan grafik kartı artık (${driver} paketinin sağladığı) "
 "NVIDIA sürücüsüyle yönetilmeyen bir kart. İstediğiniz takdirde paketi kurulu "
 "vaziyette tutmaya devam edebilirsiniz (örneğin başka bir kartı yönetmesi "
 "için), fakat aşağıdaki yonga kümesini kullanan kart bu sürücü ile "
