--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -29,11 +29,11 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"このシステムには NVIDIA ドライバ (nvidia-driver パッケージ) ではもう扱われな"
+"このシステムには NVIDIA ドライバ (${driver} パッケージ) ではもう扱われな"
 "い、グラフィックカードがあります。たとえばほかのカードを動作させるなどのため"
 "にパッケージをインストールしたままにしたいかもしれませんが、下記のチップセッ"
 "トを使ったカードは利用できなくなります:"
