--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -31,12 +31,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "В системе обнаружена графическая карта, которая больше не поддерживается "
-"драйвером NVIDIA (пакет nvidia-driver). Вы можете оставить пакет "
+"драйвером NVIDIA (пакет ${driver}). Вы можете оставить пакет "
 "установленным (например, для какой-то другой карты), но карта со следующим "
 "набором микросхем работать не будет:"
 
