--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -34,7 +34,7 @@ msgstr ""
 #| "some other card), but the above card won't be usable."
 msgid ""
 "This system has a graphics card which is no longer handled by the NVIDIA "
-"driver (package nvidia-driver). You may wish to keep the package installed - "
+"driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
