bulk substitution: ${free_driver}
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5066 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -42,12 +42,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "Det ovenstående kort kræver enten den ikkefrie forældede NVIDIA-driver "
 "(pakke ${legacy_driver}) eller den frie Nouveaudriver (pakken "
-"xserver-xorg-video-nouveau)."
+"${free_driver})."
 
 #. Type: boolean
 #. Description
