--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -42,12 +42,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "Die oben angegebene Karte benötigt entweder den nicht-freien Legacy-NVIDIA-"
 "Treiber (aus dem Paket ${legacy_driver}) oder den freien Nouveau-"
-"Treiber (aus dem Paket xserver-xorg-video-nouveau)."
+"Treiber (aus dem Paket ${free_driver})."
 
 #. Type: boolean
 #. Description
