--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -43,11 +43,11 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "A placa acima necessita da driver NVIDIA legacy não-livre (pacote "
-"${legacy_driver}) ou a driver Nouveau livre (pacote xserver-xorg-video-nouveau)."
+"${legacy_driver}) ou a driver Nouveau livre (pacote ${free_driver})."
 
 #. Type: boolean
 #. Description
