--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -41,12 +41,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "Výše uvedená karta vyžaduje buď nesvobodný ovladač NVIDIA pro starší karty "
 "(balíček ${legacy_driver}), nebo svobodný ovladač Nouveau (balíček "
-"xserver-xorg-video-nouveau)."
+"${free_driver})."
 
 #. Type: boolean
 #. Description
