--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -45,9 +45,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Virtaal 0.7.1\n"
-"X-POFile-SpellExtra: bin wheezy xserver conf NVIDIA initial backports\n"
-"X-POFile-SpellExtra: video usr xorg nouveau Xorg\n"
-"X-POFile-SpellExtra: Nouveau\n"
 
 #. Type: boolean
 #. Description
@@ -76,12 +73,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "La tarjeta arriba mencionada requiere o bien del controlador no libre y "
 "obsoleto NVIDIA (paquete «${legacy_driver}») o el controlador "
-"libre Nouveau (paquete «xserver-xorg-video-nouveau»)."
+"libre Nouveau (paquete «${free_driver}»)."
 
 #. Type: boolean
 #. Description
