--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -50,15 +50,14 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 #, fuzzy
 #| msgid ""
-#| "The above card requires the free Nouveau driver in the package xserver-"
-#| "xorg-video-nouveau."
+#| "The above card requires the free Nouveau driver in the package ${free_driver}."
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "A tarxeta de enriba precisa do controlador libre «Nouveau», incluído no "
-"paquete «xserver-xorg-video-nouveau»."
+"paquete «${free_driver}»."
 
 #. Type: boolean
 #. Description
