--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -43,12 +43,12 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package xserver-xorg-"
-"video-nouveau)."
+"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+")."
 msgstr ""
 "Yukarıdaki kartı kullanabilmek için ya özgür olmayan eski NVIDIA sürücüsünü "
-"(${legacy_driver} paketi) ya da özgür Nouveau sürücüsünü (xserver-"
-"xorg-video-nouveau paketi) kullanmak gerekmektedir."
+"(${legacy_driver} paketi) ya da özgür Nouveau sürücüsünü (${free_driver}"
+" paketi) kullanmak gerekmektedir."
 
 #. Type: boolean
 #. Description
